log
Fri Apr 17 01:03:40 AM UTC 2026: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 5/60
9e8782d
Fri Apr 17 01:04:20 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
ce564eb
Fri Apr 17 01:04:52 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
f2ae0c5
Fri Apr 17 06:37:18 PM UTC 2026: 
 hashmap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  1|6
total_score: 5/60
aa822e8
Fri Apr 17 06:40:40 PM UTC 2026: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:96:12: error: statement with no effect [-Werror=unused-value]
   96 |         map->current
      |         ~~~^~~~~~~~~
hashmap.c:96:21: error: expected ‘;’ before ‘}’ token
   96 |         map->current
      |                     ^
      |                     ;
   97 |     }
      |     ~                
hashmap.c:104:20: error: statement with no effect [-Werror=unused-value]
  104 |                 map->current
      |                 ~~~^~~~~~~~~
hashmap.c:104:29: error: expected ‘;’ before ‘}’ token
  104 |                 map->current
      |                             ^
      |                             ;
  105 |             }
      |             ~                
cc1: all warnings being treated as errors
6158a6c
Fri Apr 17 06:40:55 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:96:12: error: statement with no effect [-Werror=unused-value]
   96 |         map->current;
      |         ~~~^~~~~~~~~
hashmap.c:104:20: error: statement with no effect [-Werror=unused-value]
  104 |                 map->current;
      |                 ~~~^~~~~~~~~
cc1: all warnings being treated as errors
c08ac22
Fri Apr 17 06:41:23 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 5/60
51de1b7
Fri Apr 17 06:43:17 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 5/60
baca5f5
Fri Apr 17 06:45:13 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
7cd3ec4
Fri Apr 17 06:47:34 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
58239d8
Fri Apr 17 06:48:08 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|6
total_score: 5/60
f567c2b
Fri Apr 17 06:48:47 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
982b43c
Fri Apr 17 06:50:38 PM UTC 2026: 
 tests:  0|0
3324e69
Fri Apr 17 06:52:45 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:101:18: error: conversion lacks type at end of format [-Werror=format=]
  101 |         printf("%l", pos);
      |                  ^
hashmap.c:101:16: error: too many arguments for format [-Werror=format-extra-args]
  101 |         printf("%l", pos);
      |                ^~~~
cc1: all warnings being treated as errors
6778d0f
